scss/_main/_chrome.scss
// only enable hover effects on non-touch devices (prevents bug where users had to double-tap to search)
// this is pulled out of the below markup because of a bug with JS snippet not finding it if nested
.no-touch .search form input[type="search"]:hover {
  background-position: 12px -21px;
}

.search form {
  float: left;
  margin-top: -5px;

  input[type="search"] {
    border: 0;
    cursor: pointer;
    width: 10px;
    font-size: 0.9rem;
    @include retina-image('assets/images/search.png', 12px 6px);
    @include transition(width 0.25s, background-color 0.25s);

    &:focus {
      width: 200px;
      cursor: text;
      background-color: #fff;
      background-position: 12px 6px !important; // to override hover styles when focused

      @include respond-to(phones) {
        margin-right: -40px;
      }
    }
  }
}


// Logo & primary navigation/dropdowns
.nav--wrapper {
  position: absolute;
  top: 0;
  width: 100%;

  .main {
    @include outer-container-margin;
    margin-top: 1rem;
  }

  .logo {
    @include media($tablet) {
      @include span-columns(2);
    }

    img {
      width: 80px;
      height: 70px;
    }
  }

  .main-menu {
    li {
      float: left;
      display: block;
      margin-right: 5.59492%;
      padding: 0.5rem 0;
      line-height: 1.4;
    }

    a {
      display: block;
      color: $off-black;
      text-decoration: none;

      &:hover {
        strong {
          text-decoration: underline;
        }
      }
    }

    strong {
      display: block;
    }

    span {
      font-size: $font-small;
      text-transform: uppercase;
    }
  }

  .secondary-nav {
    float: right;
    width: 200px;
    padding: 1rem 0;

    input[type="search"] {
      margin-bottom: 0;
    }
  }
}


// Footer
.footer--wrapper {
  width: 100%;
  background: $off-black;
  overflow: hidden;

  .main {
    @include outer-container-margin;
    margin: 0 auto;


    h4 {
      color: #fff;
      margin-bottom: 0;
    }

    ul {
      list-style-type: none;
      padding: 0;
    }

    li {
      line-height: 1rem;
      margin-bottom: 0.25rem;
    }

    a {
      color: $light-gray;
      font-family: $font-proxima-nova;
      font-size: $font-small;
      text-decoration: none;

      &:hover {
        color: #fff;
        text-decoration: underline;
      }
    }

  }

  .logo {
    @include pad(1.25rem 0 0);

    img {
      width: 80px;
      height: 70px;
    }

    @include media($tablet) {
      @include span-columns(2);

    }
  }

  .col {
    @include media($tablet) {
      @include span-columns(3);
      margin-bottom: 2rem;
    }
  }

  .about {
    @include media($tablet) {
      @include omega;
    }
  }

  .social {
    @include media($tablet) {
      float: left;
      margin-top: 1.65rem;
      @include span-columns(5);
    }

    li {
      display: inline-block;
      padding: 6px 6px 6px 0;
      margin-right: 12px;
    }

    .social-link {
      font-family: 'icomoon';
      font-size: 24px;
      color: $med-gray;
      text-decoration: none;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;

      &:hover {
        color: $light-gray;
        text-decoration: none;
      }
    }
  }

  .subfooter {
    display: block;
    clear: both;
    font-size: $font-small;
    border-top: 1px solid $dark-gray;
    @include row;
    @include pad(0.5rem 0 1rem);

    a {
      color: $med-gray;
    }

    .tagline {
      display: none;

      @include media($tablet) {
        display: block;
        float: left;
        text-align: left;
      }
    }

    .utility {
      text-align: center;
      list-style-type: none;

      li {
        display: inline;
      }

      a {
        margin: 0 0.5rem;
        @include media($tablet) {
          margin: 0 0 0 1rem;
        }
      }

      @include media($tablet) {
        float: right;
      }
    }
  }
}

